--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     values-round/strings.xml for round devices.
     -->
     <string name="time_start">Bắt đầu: %s</string>
+    <string name="exam">Môn thi: %s</string>
+
     <string name="room">%s Phòng Thi</string>
     <string name="time_finish">Kết thúc: %s</string>
     <string name="teacher">Giảng viên 1: %s</string>
